consilidated appache and php add and removal playbooks

--- a/removeall_apache.yml
+++ b/removeall_apache.yml
@@ -4,9 +4,9 @@
   become: true
   tasks:
   
-  - name: install apache and php packages
+  - name: remove apache and php packages
     package:
       name: 
         - "{{ apache_package }}"
         - "{{ php_package }}"
-      state: latest 
+      state: absent 
